k8s/plausible.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plausible-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plausible
  template:
    metadata:
      labels:
        app: plausible
    spec:
      containers:
        - name: plausible
          image: plausible/analytics:latest
          arg: sh -c "sleep 10 && /entrypoint.sh db createdb && /entrypoint.sh db migrate && /entrypoint.sh db init-admin && /entrypoint.sh run"
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 8000
          volumeMounts:
          - mountPath: /geoip
            name: /plausible-geoip
            readOnly: true
        - name: plausible_events_db
          image: yandex/clickhouse-server:21.3.2.5
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
          - mountPath: /var/lib/clickhouse
            name: /plausible-event-data
        - name: geoip
          image: maxmindinc/geoipupdate
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
          - mountPath: /usr/share/GeoIP
            name: /plausible-geoip
      volumes:
      - name: /plausible-event-data
        hostPath:
          path: /opt/plausible/event-data
          type: DirectoryOrCreate
      - name: /plausible-geoip
        hostPath:
          path: /opt/plausible/geoip
          type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: plausible-clickhouse-service
spec:
  ports:
  - port: 8123
    targetPort: 8123
  selector:
    app: plausible
---
apiVersion: v1
kind: Service
metadata:
  name: plausible-service
spec:
  ports:
  - port: 80
    targetPort: 8000
    name: http
  selector:
    app: plausible
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: plausible-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  tls:
    - secretName: lazztech-acme-crt-secret
      hosts:
        - '*.lazz.tech'
  rules:
  - host: plausible.lazz.tech
    http:
      paths:
      - backend:
          serviceName: plausible-service
          servicePort: http
